--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "dev": "node index.js",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
